@@ -1,9 +1,9 @@
 MAX7219Led8x8 - Tinusaur MAX7219 Library for LED 8x8 Matrix
 
 -----------------------------------------------------------------------------------
- Copyright (c) 2016 Neven Boyanov, Tinusaur Team. All Rights Reserved.
+ Copyright (c) 2017 Neven Boyanov, Tinusaur Team. All Rights Reserved.
  Distributed as open source software under MIT License, see LICENSE.txt file.
- Please, as a favor, retain the link http://tinusaur.org to The Tinusaur Project.
+ Retain in your source code the link http://tinusaur.org to the Tinusaur project.
 -----------------------------------------------------------------------------------
 
 This is a C library for working with the MAX7219 display driver to control 8x8 LED matrix. It is intended to be used with the Tinusaur board but should also work with any other board based on ATtiny85 or similar microcontroller.
@@ -16,9 +16,9 @@ Folders and modules:
  - max7219led8x8_test       -
  - max7219led8x8_text       -
 
-This was developed with and tested on the following microcontrollers: ATtiny85, ATtiny45, ATtiny25.
+This was developed for and tested on the ATtiny85 microcontroller.
 
-This library is written in plain C and does not require any additional libraries to function except those that come with the WinAVR SDK.
+This library is written in plain C and does not require any additional libraries to function except those that come with the C/C++ SDK.
 
 ==== Links ====
 
